[MOSIP-12030] moved hotlist service into admin

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -154,6 +154,7 @@
 		<module>admin-service</module>
 		<module>kernel-masterdata-service</module>
         <module>kernel-syncdata-service</module>
+        <module>hotlist-service</module>
 	</modules>
 
 	<dependencies>
