--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.admin</groupId>
 	<artifactId>admin-parent</artifactId>
-	<version>1.1.4-SNAPSHOT</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<name>admin</name>
@@ -154,6 +154,7 @@
 		<module>admin-service</module>
 		<module>kernel-masterdata-service</module>
         <module>kernel-syncdata-service</module>
+        <module>hotlist-service</module>
 	</modules>
 
 	<dependencies>
