created location hierarchy levels api in masterdata service and added location hierarchy data in response of client setting api in syncdata service

--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -16,6 +16,8 @@ mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.net/v1/keymanage
 mosip.kernel.syncdata.cryptomanager-encrypt-url=https://dev.mosip.net/v1/cryptomanager/private/encrypt
 mosip.kernel.syncdata.public-key-url=https://dev.mosip.net/v1/keymanager/publickey/{applicationId}
 
+mosip.kernel.idobjectvalidator.masterdata.locationhierarchylevels.rest.uri = https://dev.mosip.net/v1/masterdata/locationHierarchyLevels
+
 mosip.kernel.keymanager-service-sign-url=https://dev.mosip.net/v1/keymanager/sign
 
 mosip.kernel.signature.signature-request-id=SIGNATURE.REQUEST
