Test cases added

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -23,6 +23,11 @@ mosip.supported-languages=eng,ara,fra
 
 mosip.primary-language=eng
 mosip.secondary-language=ara
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language},secondaryLangCode:${mosip.secondary-language}
+
+#---------------------------------------Security Properties-----------------------------
+#CSRF switch
+mosip.security.csrf-enable=false
 
 mosip.kernel.registrationcenterid.length=5
 mosip.kernel.machineid.length=5
