fixed test cases for multilanguage support

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -23,6 +23,9 @@ mosip.supported-languages=eng,ara,fra
 
 mosip.primary-language=eng
 mosip.secondary-language=ara
+mosip.supported-languages=eng,ara,fra
+mosip.optional-languages=abc
+mosip.mandatory-languages=eng,ara,fra
 
 mosip.kernel.registrationcenterid.length=5
 mosip.kernel.machineid.length=5
