--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -35,6 +35,10 @@ mosip.secondary-language=ara
 mosip.all-languages=all
 #auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
 mosip.supported-languages=eng,ara,fra
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version}
+nHierarchyLevel:${mosip.recommended.centers.locCode},supportedLanguages:${mosip.supported-languages}
+mosip.recommended.centers.locCode =5
+mosip.supported-languages=eng,ara,fra
 
 auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
 auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
