--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -23,7 +23,9 @@ mosip.supported-languages=eng,ara,fra
 
 mosip.primary-language=eng
 mosip.secondary-language=ara
-mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language},secondaryLangCode:${mosip.secondary-language}
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language}
+mosip.recommended.centers.locCode =5
+mosip.supported-languages=eng,ara,fra
 
 #---------------------------------------Security Properties-----------------------------
 #CSRF switch
