added missing config property

--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -9,7 +9,7 @@ mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.io/v1/keymanager
 mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/keymanager/sign
 mosip.kernel.syncdata.syncjob-base-url=http://localhost:8099/v1/admin/syncjobdef
 
-
+mosip.kernel.masterdata.locationhierarchylevels.uri = https://dev.mosip.net/v1/masterdata/locationHierarchyLevels
 hibernate.hbm2ddl.auto=create-drop
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=false
