Added pagination logic when syncing dynamic field

--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -304,6 +304,12 @@
 			<version>${kernel-websubclient-api.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-auth-adapter</artifactId>
+			<version>1.2.0-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 	
 <distributionManagement>
