--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -5,8 +5,8 @@ mosip.kernel.syncdata.registration-center-config-file=registration-${spring.prof
 mosip.kernel.syncdata.global-config-file=application-${spring.profiles.active}.properties
 mosip.kernel.syncdata.syncdata-request-id=SYNCDATA.REQUEST
 mosip.kernel.syncdata.syncdata-version-id=v1.0
-mosip.kernel.syncdata.auth-manager-base-uri=http://localhost:8091/v1/authmanager
-mosip.kernel.syncdata.syncjob-base-url=https://dev.mosip.io/v1/syncjob/syncjobdef
+mosip.kernel.syncdata.auth-manager-base-uri=https://dev.mosip.net/v1/authmanager
+mosip.kernel.syncdata.syncjob-base-url=https://dev.mosip.net/v1/syncjob/syncjobdef
 mosip.kernel.syncdata.auth-manager-roles=/roles
 mosip.kernel.syncdata.auth-user-details=/userdetails
 mosip.kernel.syncdata.auth-salt-details=/usersaltdetails
@@ -23,7 +23,7 @@ mosip.kernel.keymanager-service-sign-url=https://dev.mosip.net/v1/keymanager/sig
 mosip.kernel.signature.signature-request-id=SIGNATURE.REQUEST
 mosip.kernel.signature.signature-version-id=v1.0
 
-auth.server.validate.url=https://dev.mosip.io/v1/authorize/admin/validateToken
+auth.server.validate.url=https://dev.mosip.net/v1/authorize/admin/validateToken
 
 javax.persistence.jdbc.driver=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
@@ -38,20 +38,20 @@ hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 
 # config properties for master alone
-spring.master-datasource.jdbcUrl=jdbc:postgresql://<Database IP>:<Port>/mosip_master
+spring.master-datasource.jdbcUrl=jdbc:postgresql://dev.mosip.net:30090/mosip_master
 spring.master-datasource.username=postgres
-spring.master-datasource.password=<Database Password>
+spring.master-datasource.password=mosip123
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-mosip.kernel.syncdata-service-idschema-url=http://localhost:8086/v1/masterdata/idschema/latest
+mosip.kernel.syncdata-service-idschema-url=https://dev.mosip.net/v1/masterdata/idschema/latest
 mosip.kernel.syncdata-service-dynamicfield-url=https://dev.mosip.net/v1/masterdata/dynamicfields
 
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
-mosip.kernel.keymanager-service-validate-url=http://localhost:8088/v1/keymanager/validate
-mosip.kernel.keymanager.cert.url=https://localhost:8800/v1/keymanager/getCertificate
-mosip.kernel.syncdata-service-machine-url=http://localhost:8086/v1/machines/%s/eng
+mosip.kernel.keymanager-service-validate-url=https://dev.mosip.net/v1/keymanager/validate
+mosip.kernel.keymanager.cert.url=https://dev.mosip.net/v1/keymanager/getCertificate
+mosip.kernel.syncdata-service-machine-url=https://dev.mosip.net/v1/machines/%s/eng
 
 mosip.kernel.authtoken.NEW.internal.url=https://dev.mosip.net/v1/authmanager/authenticate/internal/useridPwd
 mosip.kernel.authtoken.OTP.internal.url=https://dev.mosip.net/v1/authmanager/authenticate/internal/userotp
@@ -133,3 +133,5 @@ mosip.kernel.keymanager.softhsm.certificate.country=IN
 mosip.kernel.partner.sign.masterkey.application.id=PMS
 mosip.kernel.partner.allowed.domains=test
 mosip.keymanager.dao.enabled=false
+
+aplication.configuration.level.version=1.2.0-SNAPSHOT
