reverted incorrect changes

--- a/admin/kernel-syncdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 #spring.cloud.config.uri=localhost
 #spring.cloud.config.label=master
-//spring.profiles.active=local
+#spring.profiles.active=local
 spring.cloud.config.name=syncdata
 spring.application.name=kernel-syncdata-service
 #management.security.enabled=false
