added config to test resources

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -29,7 +29,7 @@ mosip.mandatory-languages=eng,ara,fra
 
 mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language}
 mosip.recommended.centers.locCode =5
-
+mosip.kernel.masterdata.auth-manager-base-uri=http://localhost:8086/v1/authmanager
 #---------------------------------------Security Properties-----------------------------
 #CSRF switch
 mosip.security.csrf-enable=false
