--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -17,11 +17,11 @@ hibernate.generate_statistics=false
 #property name is case sensitive and required for interceptors configuration
 #hibernate.ejb.interceptor=io.mosip.kernel.masterdata.config.MasterDataInterceptor
 
-#auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken 
+#auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/validateToken 
 
-#auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken 
-mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
-mosip.kernel.packet-status-update-url=https://dev.mosip.io/registrationprocessor/v1/registrationstatus/search
+#auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/validateToken 
+mosip.kernel.masterdata.audit-url=https://dev.mosip.net/v1/auditmanager/audits
+mosip.kernel.packet-status-update-url=https://dev.mosip.net/registrationprocessor/v1/registrationstatus/search
 
 mosip.kernel.registrationcenterid.length=5
 mosip.kernel.machineid.length=5
@@ -33,7 +33,7 @@ masterdata_database_password=mosip123
 mosip.primary-language=eng
 mosip.secondary-language=ara
 mosip.all-languages=all
-#auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
+#auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/validateToken
 mosip.supported-languages=eng,ara,fra
 mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version}
 nHierarchyLevel:${mosip.recommended.centers.locCode},supportedLanguages:${mosip.supported-languages}
@@ -45,11 +45,11 @@ auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/ad
 
 master.search.maximum.rows=50
 
-mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=https://dev.mosip.net/v1/auditmanager/audits
 
 mosip.level=2
 
-mosip.kernel.sign-url=https://qa.mosip.io/v1/signature/sign
+mosip.kernel.sign-url=https://dev.mosip.net/v1/signature/sign
 
 masterdata.registerdevice.timestamp.validate=+5
 mosip.kernel.applicant.type.age.limit = 5
@@ -57,3 +57,12 @@ mosip.stage.environment=Staging
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 mosip.kernel.applicantType.mvel.file=applicanttype.mvel
 mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel/mz/1.2.0-SNAPSHOT
+
+mosip.primary-language=eng
+mosip.secondary-language=eng
+aplication.configuration.level.version=1.1.5
+mosip.recommended.centers.locCode=3
+mosip.supported-languages=eng
+mosip.admin.ui.configs=null
+mosip.mandatory-languages=eng
+mosip.optional-languages=fra,ara
