--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -55,3 +55,5 @@ pring.profiles.active=test
 
 mosip.syncdata.tpm.required=false
 aplication.configuration.level.version=1.2.0-SNAPSHOT
+
+mosip.kernel.masterdata.auth-manager-base-uri=http://localhost
