--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.mosip.admin</groupId>
 	<artifactId>admin-parent</artifactId>
-	<version>1.1.5-SNAPSHOT</version>
+	<version>1.1.5-rc1</version>
 	<packaging>pom</packaging>
 	
 	<name>admin</name>
@@ -170,7 +170,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
-			<version>1.1.5-SNAPSHOT</version>
+			<version>1.1.5-rc1</version>
 		</dependency>
 	</dependencies>
 	
