--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -44,4 +44,4 @@ spring.cloud.config.name=master
 pring.profiles.active=test
 
 mosip.syncdata.tpm.required=false
-aplication.configuration.level.version=1.1.5-rc1
+aplication.configuration.level.version=1.1.5
