User center mapping and zone mapping is updated to be without langCode

--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -135,3 +135,6 @@ mosip.kernel.partner.allowed.domains=test
 mosip.keymanager.dao.enabled=false
 
 aplication.configuration.level.version=1.2.0-SNAPSHOT
+
+mosip.mandatory-languages=eng
+mosip.optional-languages=fra,ara
