Removed the usage of signatureUtil, instead using jwtsign

--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -18,7 +18,7 @@ mosip.kernel.syncdata.public-key-url=https://dev.mosip.net/v1/keymanager/publick
 
 mosip.kernel.masterdata.locationhierarchylevels.uri = https://dev.mosip.net/v1/masterdata/locationHierarchyLevels
 
-mosip.kernel.keymanager-service-sign-url=https://dev.mosip.net/v1/keymanager/sign
+mosip.kernel.keymanager-service-sign-url=https://dev.mosip.net/v1/keymanager/jwtSign
 
 mosip.kernel.signature.signature-request-id=SIGNATURE.REQUEST
 mosip.kernel.signature.signature-version-id=v1.0
@@ -81,7 +81,7 @@ syncdata.websub.callback.url.path.ca-cert=/v1/syncdata/websub/callback/cacert
 syncdata.websub.callback.url.ca-cert=http://localhost:8089/v1/syncdata/websub/callback/cacert
 websub.publish.url=http://localhost:9191/websub/publish
 websub.hub.url=http://localhost:9191/websub/hub
-syncdata.websub.resubscription.retry.count=3
+syncdata.websub.resubscription.retry.count=1
 syncdata.websub.resubscription.delay.secs=6000000
 subscriptions-delay-on-startup=120000
 
