MOSIP-10476 added event for templates and titles

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -57,3 +57,12 @@ mosip.syncdata.tpm.required=false
 aplication.configuration.level.version=1.2.0-SNAPSHOT
 
 mosip.kernel.masterdata.auth-manager-base-uri=http://localhost
+
+mosip.kernel.masterdata.title_event=masterdata/idauthentication_templates
+
+websub.publish.url=http://localhost:8080/websub
+
+mosip.kernel.masterdata.template_idauthentication_event=masterdata/idauthentication_templates
+
+mosip.kernel.masterdata.template_idauthentication_event_module_name=ID Authentication
+
