changed model to event model

--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -61,3 +61,13 @@ mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 mosip.kernel.applicantType.mvel.file=applicanttype.mvel
 mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel/mz/1.2.0-SNAPSHOT
 mosip.kernel.masterdata.auth-manager-base-uri=http://localhost:8080/
+
+
+mosip.kernel.masterdata.title_event=masterdata/titles
+
+websub.publish.url=https://dev.mosip.net/websub/publish
+
+mosip.kernel.masterdata.template_idauthentication_event=masterdata/idauthentication_templates
+
+mosip.kernel.masterdata.template_idauthentication_event_module_name=ID Authentication
+
