Added possiblevalues API for both dynamic and default fields

--- a/admin/kernel-masterdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-dev.properties
@@ -49,3 +49,6 @@ mosip.level=2
 mosip.kernel.sign-url=https://qa.mosip.io/v1/signature/sign
 
 masterdata.registerdevice.timestamp.validate=+5
+
+masterdata.websub.resubscription.delay.millis=6000000
+masterdata.subscriptions-delay-on-startup=120000
