--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -66,3 +66,5 @@ mosip.kernel.masterdata.template_idauthentication_event=masterdata/idauthenticat
 
 mosip.kernel.masterdata.template_idauthentication_event_module_name=ID Authentication
 
+masterdata.websub.resubscription.delay.millis=6000000
+masterdata.subscriptions-delay-on-startup=120000
