--- a/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
@@ -61,7 +61,8 @@ syncdata.websub.callback.url.ca-cert=http://localhost:8089/v1/syncdata/callback/
 websub.publish.url=http://localhost:9191/websub/publish
 websub.hub.url=http://localhost:9191/websub/hub
 syncdata.websub.resubscription.retry.count=3
-syncdata.websub.resubscription.delay.secs=0
+syncdata.websub.resubscription.delay.millis=0
+subscriptions-delay-on-startup=120000
 
 #----------------------- key manager config ---------------------------------------
 #Crypto asymmetric algorithm name
