--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -82,7 +82,7 @@ syncdata.websub.callback.url.ca-cert=http://localhost:8089/v1/syncdata/websub/ca
 websub.publish.url=http://localhost:9191/websub/publish
 websub.hub.url=http://localhost:9191/websub/hub
 syncdata.websub.resubscription.retry.count=1
-syncdata.websub.resubscription.delay.secs=6000000
+syncdata.websub.resubscription.delay.millis=6000000
 subscriptions-delay-on-startup=120000
 
 #----------------------- key manager config ---------------------------------------
