mosip-13761 cache evict and scheduler added

--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -71,3 +71,6 @@ mosip.kernel.masterdata.template_idauthentication_event=masterdata/idauthenticat
 
 mosip.kernel.masterdata.template_idauthentication_event_module_name=ID Authentication
 
+#scheduler do it's job at 2am
+scheduling.job.cron=0 0 2 * * ?
+
