Changes to integrate with new kernel-auth-adapter

--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -138,3 +138,13 @@ aplication.configuration.level.version=1.2.0-SNAPSHOT
 
 mosip.mandatory-languages=eng
 mosip.optional-languages=fra,ara
+
+mosip.iam.adapter.clientid=mosip-regproc-client
+mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.appid=regproc
+mosip.iam.adapter.issuerURL=https://dev.mosip.net/keycloak/auth/realms/mosip
+mosip.authmanager.base-url=https://dev.mosip.net/v1/authmanager
+mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
+mosip.iam.adapter.validate-expiry-check-rate=15
+mosip.iam.adapter.renewal-before-expiry-interval=15
+
