--- a/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
@@ -111,3 +111,12 @@ mosip.kernel.keymanager.softhsm.certificate.country=IN
 mosip.kernel.partner.sign.masterkey.application.id=PMS
 mosip.kernel.partner.allowed.domains=test
 mosip.keymanager.dao.enabled=false
+
+mosip.iam.adapter.clientid=mosip-regproc-client
+mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.appid=regproc
+mosip.iam.adapter.issuerURL=https://dev.mosip.net/keycloak/auth/realms/mosip
+mosip.authmanager.base-url=https://dev.mosip.net/v1/authmanager
+mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
+mosip.iam.adapter.validate-expiry-check-rate=15
+mosip.iam.adapter.renewal-before-expiry-interval=15
