--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -121,3 +121,12 @@ mosip.kernel.partner.sign.masterkey.application.id=PMS
 mosip.kernel.partner.allowed.domains=test
 mosip.keymanager.dao.enabled=false
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
+
+mosip.iam.adapter.clientid=mosip-regproc-client
+mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.appid=regproc
+mosip.iam.adapter.issuerURL=https://dev.mosip.net/keycloak/auth/realms/mosip
+mosip.authmanager.base-url=https://dev.mosip.net/v1/authmanager
+mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
+mosip.iam.adapter.validate-expiry-check-rate=15
+mosip.iam.adapter.renewal-before-expiry-interval=15
