MOSIP-15446: openapi.json file generated for Commons - Master Data Service

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -56,8 +56,6 @@ pring.profiles.active=test
 mosip.syncdata.tpm.required=false
 aplication.configuration.level.version=1.2.0-SNAPSHOT
 
-mosip.kernel.masterdata.auth-manager-base-uri=http://localhost
-
 mosip.kernel.masterdata.title_event=masterdata/idauthentication_templates
 
 websub.publish.url=http://localhost:8080/websub
@@ -71,3 +69,40 @@ masterdata.subscriptions-delay-on-startup=120000
 
 #scheduler do it's job at 2am
 scheduling.job.cron=0 0 2 * * ?
+
+#spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
+
+
+
+#property name is case sensitive and required for interceptors configuration
+#hibernate.ejb.interceptor=io.mosip.kernel.masterdata.config.MasterDataInterceptor
+
+#auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken
+
+#auth.server.validate.url=https://qa.mosip.io/v1/authmanager/authorize/validateToken
+mosip.kernel.masterdata.audit-url=https://dev.mosip.net/v1/auditmanager/audits
+mosip.kernel.packet-status-update-url=https://dev.mosip.net/registrationprocessor/v1/registrationstatus/search
+
+
+
+masterdata_database_url=jdbc:postgresql://dev.mosip.net:30090/mosip_master
+masterdata_database_username=masteruser
+masterdata_database_password=mosip123
+
+
+mosip.all-languages=all
+#auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/validateToken
+
+
+auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
+auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
+
+master.search.maximum.rows=50
+
+
+
+mosip.level=2
+
+mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
+mosip.kernel.applicantType.mvel.file=applicanttype.mvel
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel/mz/1.2.0-SNAPSHOT
