test cases updated

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -71,3 +71,5 @@ masterdata.subscriptions-delay-on-startup=120000
 
 #scheduler do it's job at 2am
 scheduling.job.cron=0 0 2 * * ?
+
+spring.cache.type=NONE
