Added controls for handling authroized roles from external source.

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -255,3 +255,14 @@ regproc.token.request.id=io.mosip.registration.processor
 regproc.token.request.version=1.0
 
 KEYBASEDTOKENAPI=https://dev.mosip.net/v1/authmanager/authenticate/clientidsecretkey
+
+#packet status update controller
+mosip.role.admin.packetstatusupdater.getpacketstatusupdate=GLOBAL_ADMIN,ZONAL_ADMIN
+
+#Bulk data upload controller
+mosip.role.admin.bulkdataupload.postbulkupload=GLOBAL_ADMIN
+mosip.role.admin.bulkdataupload.getbulkuploadtranscationtranscationid=GLOBAL_ADMIN
+mosip.role.admin.bulkdataupload.getbulkuploadgetalltransactions=GLOBAL_ADMIN
+
+#Audit manager proxy controller
+mosip.role.admin.packetstatusupdater.postauditmanagerlog=GLOBAL_ADMIN,ZONAL_ADMIN
