removed primaryLang  all the places for the admin

--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -10,7 +10,9 @@ mosip.admin-userid-otp-type=USERID
 
 #-----------------UINActive/Deactive--------------------------------- 
 mosip.admin.uinmgmt.uin-detail-search=http://localhost:8080/idrepository/v1/identity/uin/{uin}
-
+mosip.optional-languages=fra,ara
+mosip.mandatory-languages=eng
+mosip.supported-languages=eng,ara,fra
 
 mosip.admin.accountmgmt.auth-manager-base-uri=http://localhost:8091/v1/authmanager
 mosip.admin.accountmgmt.user-name-url=/username/
