--- a/admin/kernel-masterdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-dev.properties
@@ -30,12 +30,12 @@ mosip.kernel.packet-status-update-url=https://dev.mosip.io/registrationprocessor
 mosip.kernel.registrationcenterid.length=5
 mosip.kernel.machineid.length=5
 
-
-mosip.primary-language=eng
-mosip.secondary-language=ara
 mosip.all-languages=all
 #auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
 mosip.supported-languages=eng,ara,fra
+
+mosip.optional-language=ara,fra
+mosip.mandatory-language=eng
 
 auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
 auth.server.admin.validate.url=https://dev.mosip.io/v1/authmanager/authorize/admin/validateToken
@@ -52,3 +52,4 @@ masterdata.registerdevice.timestamp.validate=+5
 
 masterdata.websub.resubscription.delay.millis=6000000
 masterdata.subscriptions-delay-on-startup=120000
+
