--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -21,13 +21,9 @@ server.servlet.path=/masterdata
 
 mosip.supported-languages=eng,ara,fra
 
-mosip.primary-language=eng
-mosip.secondary-language=ara
-
-mosip.optional-languages=abc
-mosip.mandatory-languages=eng,ara,fra
-
-mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language}
+mosip.optional-languages=ara,fra
+mosip.mandatory-languages=eng
+mosip.admin.ui.configs=mandatoryLangCode:${mosip.mandatory-languages};optionalLangCode:${mosip.optional-languages}
 mosip.recommended.centers.locCode =5
 mosip.kernel.masterdata.auth-manager-base-uri=http://localhost:8086/v1/authmanager
 #---------------------------------------Security Properties-----------------------------
