Upgrade for Swagger2.0 to Swagger3.0

--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -80,3 +80,12 @@ scheduling.job.cron=0 0 2 * * ?
 
 masterdata.websub.resubscription.delay.millis=6000000
 masterdata.subscriptions-delay-on-startup=120000
+
+openapi.info.title=Master Data Service
+openapi.info.description=Master Data Service for CRUD
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+springdoc.swagger-ui.disable-swagger-default-url=true
+
+
