--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -69,3 +69,9 @@ masterdata.subscriptions-delay-on-startup=120000
 scheduling.job.cron=0 0 2 * * ?
 
 spring.cache.type=NONE
+openapi.info.title=Master Data Service
+openapi.info.description=Master Data Service for CRUD
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+springdoc.swagger-ui.disable-swagger-default-url=true
