MOSIP-15995 MOSIP-15381 MOSIP-15375

--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -70,6 +70,7 @@ websub.publish.url=http://localhost:9191/websub/publish
 websub.hub.url=http://localhost:9191/websub/hub
 syncdata.websub.resubscription.retry.count=3
 syncdata.websub.resubscription.delay.secs=60000
+subscriptions-delay-on-startup=120000
 
 #----------------------- key manager config ---------------------------------------
 #Crypto asymmetric algorithm name
