--- a/admin/admin-service/src/main/resources/bootstrap.properties
+++ b/admin/admin-service/src/main/resources/bootstrap.properties
@@ -26,3 +26,7 @@ spring.servlet.multipart.max-request-size=100MB
 # 5 minutes (should not be done in production)
 health.config.enabled=false
 #auth.server.validate.url=https://dev.mosip.io/v1/authmanager/authorize/validateToken
+
+#To read the property file by the name
+mosip.admin.globalproperty.prefix=globalMessages_
+mosip.admin.globalproperty.suffix=.properties
