clientsettings caching and URL support

--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -69,8 +69,8 @@ syncdata.websub.callback.url.ca-cert=http://localhost:8089/v1/syncdata/callback/
 websub.publish.url=http://localhost:9191/websub/publish
 websub.hub.url=http://localhost:9191/websub/hub
 syncdata.websub.resubscription.retry.count=3
-syncdata.websub.resubscription.delay.secs=60000
 subscriptions-delay-on-startup=120000
+syncdata.websub.resubscription.delay.millis=60000
 
 #----------------------- key manager config ---------------------------------------
 #Crypto asymmetric algorithm name
@@ -123,6 +123,11 @@ mosip.kernel.partner.allowed.domains=test
 mosip.keymanager.dao.enabled=false
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 
+aplication.configuration.level.version=1.2.0-SNAPSHOT
+
+mosip.mandatory-languages=eng
+mosip.optional-languages=fra,ara
+
 mosip.iam.adapter.clientid=mosip-regproc-client
 mosip.iam.adapter.clientsecret=abc123
 mosip.iam.adapter.appid=regproc
@@ -131,3 +136,4 @@ mosip.authmanager.base-url=https://dev.mosip.net/v1/authmanager
 mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
 mosip.iam.adapter.validate-expiry-check-rate=15
 mosip.iam.adapter.renewal-before-expiry-interval=15
+mosip.iam.adapter.self-token-renewal-enable=true
