--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -148,3 +148,9 @@ mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authentica
 mosip.iam.adapter.validate-expiry-check-rate=15
 mosip.iam.adapter.renewal-before-expiry-interval=15
 
+mosip.sync.entity.url.APPLICANTTYPE.MVEL=https://dev.mosip.net/v1/syncdata/scripts/applicanttype.mvel
+mosip.sync.entity.auth-required.APPLICANTTYPE.MVEL=true
+mosip.sync.entity.auth-token.APPLICANTTYPE.MVEL=Authorization:OAUTH
+mosip.sync.entity.encrypted.APPLICANTTYPE.MVEL=false
+mosip.sync.entity.headers.APPLICANTTYPE.MVEL=Content-Type:text/plain;charset=UTF-8
+mosip.sync.entity.only-on-fullsync.APPLICANTTYPE.MVEL=false
