rc2 merged back to develop

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -50,7 +50,7 @@ spring.cloud.config.name=master
 pring.profiles.active=test
 
 mosip.syncdata.tpm.required=false
-aplication.configuration.level.version=1.2.0-rc2-SNAPSHOT
+aplication.configuration.level.version=1.2.0-SNAPSHOT
 
 mosip.kernel.masterdata.title_event=masterdata/idauthentication_templates
 
