--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.mosip.hotlist</groupId>
 	<artifactId>hotlist-service</artifactId>
-	<version>1.2.0-rc2-SNAPSHOT</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<name>Hotlist Service</name>
 	<description>Service to block/unblock ids in MOSIP</description>
 
@@ -30,9 +30,9 @@
 		<spring-webflux.version>5.0.6.RELEASE</spring-webflux.version>
 
 		<!-- kernel properties -->
-		<kernel-core.version>1.2.0-rc2-SNAPSHOT</kernel-core.version>
-		<kernel-websubclient-api.version>1.2.0-rc2-SNAPSHOT</kernel-websubclient-api.version>
-		<kernel-logger-logback.version>1.2.0-rc2-SNAPSHOT</kernel-logger-logback.version>
+		<kernel-core.version>1.2.0-SNAPSHOT</kernel-core.version>
+		<kernel-websubclient-api.version>1.2.0-SNAPSHOT</kernel-websubclient-api.version>
+		<kernel-logger-logback.version>1.2.0-SNAPSHOT</kernel-logger-logback.version>
 	</properties>
 
 	<dependencies>
