Added user control for new api

--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -268,12 +268,12 @@ mosip.registration.processor.postalcode.req.url=https://dev.mosip.net/v1/masterd
 mosip.registration.processor.lostrid.id=mosip.registration.lostrid
 
 #packet status update controller
-mosip.role.admin.packetstatusupdater.getpacketstatusupdate=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.getpacketstatusupdate=GLOBAL_ADMIN,ZONAL_ADMIN
 
 #Bulk data upload controller
-mosip.role.admin.bulkdataupload.postbulkupload=GLOBAL_ADMIN
-mosip.role.admin.bulkdataupload.getbulkuploadtranscationtranscationid=GLOBAL_ADMIN
-mosip.role.admin.bulkdataupload.getbulkuploadgetalltransactions=GLOBAL_ADMIN
+mosip.role.admin.postbulkupload=GLOBAL_ADMIN
+mosip.role.admin.getbulkuploadtranscationtranscationid=GLOBAL_ADMIN
+mosip.role.admin.getbulkuploadgetalltransactions=GLOBAL_ADMIN
 
 #Audit manager proxy controller
-mosip.role.admin.packetstatusupdater.postauditmanagerlog=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.postauditmanagerlog=GLOBAL_ADMIN,ZONAL_ADMIN
