fixed test cases for admin

--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -322,3 +322,18 @@ mosip.admin-services.required.roles=GLOBAL_ADMIN
 
 mosip.admin.globalproperty.prefix=globalMessages_
 mosip.admin.globalproperty.suffix=.properties
+
+mosip.registration.processor.lostrid.version=1.0
+mosip.registration.processor.postalcode.req.url=https://dev.mosip.net/v1/masterdata/registrationcenters
+mosip.registration.processor.lostrid.id=mosip.registration.lostrid
+
+#packet status update controller
+mosip.role.admin.getpacketstatusupdate=GLOBAL_ADMIN,ZONAL_ADMIN
+
+#Bulk data upload controller
+mosip.role.admin.postbulkupload=GLOBAL_ADMIN
+mosip.role.admin.getbulkuploadtranscationtranscationid=GLOBAL_ADMIN
+mosip.role.admin.getbulkuploadgetalltransactions=GLOBAL_ADMIN
+
+#Audit manager proxy controller
+mosip.role.admin.postauditmanagerlog=GLOBAL_ADMIN,ZONAL_ADMIN
