Fixed test case failure

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -401,3 +401,6 @@ mosip.role.admin.masterdata.getdocumentcategoriesmissingidslangcode=GLOBAL_ADMIN
 mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 
 mosip.centertypecode.validate.regex=^[a-zA-Z0-9]([_-](?![_-])|[a-zA-Z0-9]){0,34}[a-zA-Z0-9]$
+
+mosip.kernel.applicantType.mvel.file=applicanttype.mvel
+mosip.kernel.config.server.file.storage.uri=http://localhost/config/kernel-masterdata-service/mz/develop/
